# ouroboros-idle-cpp

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  _build.sh
.github/workflows/: cmake-single-platform.yml
src/: CMakeLists.txt  Equipment.h  Gender.h  Hero.cpp  Hero.h  Human.cpp  Human.h  Item.h  Main.cpp  Player.h
src/Battle/: Battle.cpp  Battle.h  Player.h
src/Common/: Gender.cpp  Gender.h
src/Creature/: Creature.cpp  Creature.h  Hero.cpp  Hero.h  Monster.cpp  Monster.h
src/Inventory/: Equipment.cpp  Equipment.h  Item.cpp  Item.h
src/core/character/: Human.cpp  Human.h
src/core/common/: Human.cpp  Human.h
src/interface/character/: GenderInterface.h  HumanInterface.h
src/interface/common/: Gender.h
src/interface/item/: Equipment.h  Item.h  ItemInterface.h
test/: CMakeLists.txt  TestGender.cpp  TestHero.cpp
test/unittest/: CMakeLists.txt  TestHero.cpp
